--- a/EX10/app/src/main/AndroidManifest.xml
+++ b/EX10/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.INTERNET"/>
-
+    <!-- Permission to read contacts -->
+    <uses-permission
+        android:name="android.permission.READ_CONTACTS"/>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,7 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.EX9"
+        android:theme="@style/Theme.EX10"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
